Ignore .DS_Store files

--- a/StockMarketApp/.gitignore
+++ b/StockMarketApp/.gitignore
@@ -1,6 +1,7 @@
 # File that contains the list of files and directories to be ignored by Git in the StockMarketApp project
 # This file is used to prevent unnecessary files from being tracked by Git
 # and to keep the repository clean.
+.DS_Store
 *.log
 temp/
 *.tmp
